# jrl-dynamics

./: CMakeLists.txt  package.xml
include/jrl/dynamics/: dynamicbody.hh
src/: CMakeLists.txt
src/private/: Body.h
src/public/: GeometricData.cpp
tools/: CMakeLists.txt
